@@ -319,6 +319,16 @@ if($in_lockdown_mode) {
   $disable_account_details = "disabled";
 }
 
+/* Determine OpenID URL */
+$protocol = "http";
+if (array_key_exists('HTTPS', $_SERVER)) {
+  $protocol = "https";
+}
+$host  = $_SERVER['SERVER_NAME'];
+$openid_url = ("$protocol://$host/server/server.php/idpage?user="
+               . $user->username);
+
+
 print "<h2>Account Summary</h2>\n";
 // Show username, email, affiliation, IdP, urn, prettyName, maybe project count and slice count
 // Put this in a nice table
@@ -326,6 +336,7 @@ print "<table>\n";
 print "<tr><th>Name</th><td>" . $user->prettyName() . "</td></tr>\n";
 print "<tr><th>Email</th><td>" . $user->email() . "</td></tr>\n";
 print "<tr><th>GENI Username</th><td>" . $user->username . "</td></tr>\n";
+print "<tr><th>GENI OpenID URL</th><td>" . $openid_url . "</td></tr>\n";
 print "<tr><th>GENI URN</th><td>" . $user->urn() . "</td></tr>\n";
 print "<tr><th>Home Institution</th><td>" . $user->idp_url . "</td></tr>\n";
 print "<tr><th>Affiliation</th><td>" . $user->affiliation . "</td></tr>\n";
