@@ -5,7 +5,8 @@
 = GENI Portal Release Notes =
 
 == 2.15 ==
- * backend changes to support managing aggregates on slice page (#339)
+ * Display OpenID URL on profile page (#290)
+ * Backend changes to support managing aggregates on slice page (#339)
  * Allow new users to activate via OpenID (#1029)
  * Update dragon.maxgigapop SSL cert (#1033)
 
